--- a/src/Lib.FeatureConfig/Lib.FeatureConfig.csproj
+++ b/src/Lib.FeatureConfig/Lib.FeatureConfig.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netcoreapp2.2</TargetFramework>
     <Authors>Arda</Authors>
     <Description>A simple ASP.NET Core  service extension to roll out some features by limiting the availability by date.
 
